<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.UpdateStudentFragment">

    <TableRow
        android:layout_marginTop="30dp"
            android:gravity="center">
        <TextView
            android:text="@string/update_student_information"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
        android:gravity="start">
        <TextView
            android:text="@string/student_id"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="5dp"
            />
        <TextView
            android:id="@+id/student_id"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:text="@string/_203949"
            android:maxLength="50"
            android:textColor="@color/disabled_color"
            android:fontFamily="sans-serif" />
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp"
            android:gravity="start">
        <TextView
            android:text="@string/student_name"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="5dp"
            />
        <EditText
            android:id="@+id/student_name"
            android:hint="@string/jhon_doe"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="sans-serif"
            android:autofillHints="name"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
            android:gravity="start">
        <TextView
            android:text="@string/father_name"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="5dp"
            />
        <EditText
            android:id="@+id/father_name"
            android:hint="@string/jhon_doe"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="sans-serif"
            android:autofillHints="name"
            android:inputType="textPersonName"
            />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
            android:gravity="start">
        <TextView
            android:text="@string/admission_date"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="5dp"
            />
        <TextView
            android:id="@+id/admission_date"
            android:hint="@string/pick_a_date"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="100"
            android:fontFamily="sans-serif"
            />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
            android:gravity="start">
        <TextView
            android:text="@string/tuition_fees"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="5dp"
            />
        <EditText
            android:id="@+id/tuition_fees"
            android:hint="@string/_0_00"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="sans-serif"
            android:autofillHints=""
            android:inputType="numberDecimal"
            />
    </TableRow>


    <TableRow
        android:layout_marginTop="20dp"
            android:gravity="start">
        <TextView
            android:text="@string/contact_number"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="5dp"
            />
        <EditText
            android:id="@+id/contact_number"
            android:hint="@string/_019xxxxxxxx"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="sans-serif"
            android:autofillHints="phone"
            android:inputType="number"
            />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
            android:gravity="start">
        <Button
            android:id="@+id/btn_delete"
            android:text="@string/delete"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="sans-serif"
            app:backgroundTint="#d90340"
            />
        <Space
            android:layout_width="30dp"
            />
        <Button
            android:id="@+id/btn_update"
            android:text="@string/update"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_width="120dp"
            android:maxLines="1"
            android:maxLength="50"
            android:fontFamily="sans-serif"
            />
    </TableRow>

</TableLayout>