<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="15dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/jhon_doe"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/student_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/student_name"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/_019xxxxxxxx"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/student_tuition_fees"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/_0_00" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>